--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,5 @@
+Will this file work?
+
 name: ML Pipeline CI
 
 on:
@@ -7,7 +9,10 @@ on:
     branches: [ main, master ]
 
 jobs:
-  test:
+  test: # Name of the first and only job in this workflow
+    # Defines environment variables for this 'test' job
+    env:
+      MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -15,7 +20,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.11'
         
     - name: Install dependencies
       run: |
